# plex-to-letterboxd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: client.rs  deserializers.rs  lib.rs  main.rs
src/media_item/: mod.rs
src/watch_history/: mod.rs
