[package]
name = "plex-to-letterboxd"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
csv = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
